--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
     <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+
+
 
 <center><h1>gitnavmap<h1/></center>
     <ul>
@@ -12,5 +19,8 @@
   <li> <a href="./Exercises/4.%20SASS">4. SASS</a></li></ul>
   <ul>
   <li> <a href="./Exercises/2.%20HTML/index.HTML">5. Markdown-to-HTML</a></li></ul>
-</ul>
+    </ul>
+  <li> <a href="file:///home/mitchell/learning-markup/Exercises/2.%20HTML/index.HTML">
+</body>
+
 </html>
