--- a/Index.html
+++ b/Index.html
@@ -15,12 +15,14 @@
   <ul>
   <li> <a href="./master/Exercises/1.%20CSS">1. CSS</a></li>
   <li> <a href="./Exercises/2.%20HTML">2. HTML</a></li>
+  <ol>
+  <li> <a href="./Exercises/2.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li></ol>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
   <li> <a href="./Exercises/4.%20SASS">4. SASS</a></li></ul>
   <ul>
-  <li> <a href="./Exercises/2.%20HTML/index.HTML">5. Markdown-to-HTML</a></li></ul>
+  </ul>
     </ul>
-  <li> <a href="file:///home/mitchell/learning-markup/Exercises/2.%20HTML/index.HTML">
+  <li> <a href="file:///home/mitchell/learning-markup/Exercises/1.%20HTML/1.%20markdown-to-html/index.html">
 </body>
 
 </html>
