--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
     <ul>
   <li> <a href="./master/Exercises">Exercises</a></li>
   <ul>
-  <li> <a href="./master/Exercises/1.%20CSS">1. CSS</a></li>
-  <li> <a href="./Exercises/2.%20HTML">2. HTML</a></li>
+  <li> <a href="./master/Exercises/1.%20CSS">1. HTML</a></li>
+  <li> <a href="./Exercises/2.%20HTML">2. CSS</a></li>
   <ol>
   <li> <a href="./Exercises/2.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li></ol>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
@@ -22,6 +22,7 @@
   <ul>
   </ul>
     </ul>
+  <li> <a href="file:///home/mitchell/learning-markup/Exercises/1.%20HTML/1.%20markdown-to-html/index.html">
 </body>
 
 </html>
