--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
     <ul>
   <li> <a href="./master/Exercises">Exercises</a></li>
   <ul>
-  <li> <a href="./master/Exercises/1.%20CSS">1. HTML</a></li>
-  <li> <a href="./Exercises/2.%20HTML">2. CSS</a></li>
+  <li> <a href="./master/Exercises/1.%20HTML">1. HTML</a></li>
+  <li> <a href="./Exercises/2.%20CSS">2. CSS</a></li>
   <ol>
   <li> <a href="./Exercises/2.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li></ol>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
