--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,8 @@
   <li> <a href="./master/Exercises">Exercises</a></li>
   <ul>
   <li> <a href="./master/Exercises/1.%20HTML">1. HTML</a></li>
+  <ol><li> <a href="./Exercises/2.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li></ol>
   <li> <a href="./Exercises/2.%20CSS">2. CSS</a></li>
-  <ol>
-  <li> <a href="./Exercises/2.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li></ol>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
   <li> <a href="./Exercises/4.%20SASS">4. SASS</a></li></ul>
   <ul>
