buh duzendste poging ofs

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
   <ul>
   </ul>
     </ul>
-  <li> <a href="file:///home/mitchell/learning-markup/Exercises/1.%20HTML/1.%20markdown-to-html/index.HTML">
+  <li> <a href="file:///home/mitchell/learning-markup/Exercises/1.%20HTML/markdown-to-html/index.HTML">
 </body>
 
 </html>
