--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul>
   <li> <a href="./master/Exercises/1.%20HTML">1. HTML</a></li>
   <ol><li> <a href="./Exercises/1.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li>
-      <li> <a href="./Exercises/1.%20HTML/about-me/aboutme.html">about-me</a></li></ol>
+      <li> <a href="/Exercises/1.%20HTML/about-me/aboutme.html">about-me</a></li></ol>
   <li> <a href="./Exercises/2.%20CSS">2. CSS</a></li>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
   <li> <a href="./Exercises/4.%20SASS">4. SASS</a></li></ul>
