--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li> <a href="./Exercises/1.%20HTML/about-me/aboutme.html">about-me</a></li></ol>
   <li> <a href="./Exercises/2.%20CSS">2. CSS</a></li>
       <ol><li> <a href="/Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li>
-      <li> <a href="Exercises/1.%20HTML/minesweeper/minesweeper.html">minesweeper</a></li></ol>
+      <li> <a href="/Exercises/1.%20HTML/minesweeper/minesweeper.html">minesweeper</a></li></ol>
   <li> <a href="./Exercises/3.%20Project%20Markup">3. Project Markup</a></li>
   <li> <a href="./Exercises/4.%20SASS">4. SASS</a></li></ul>
     </ul>
