--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <li><a href="./Exercises/2.%20CSS">2. CSS</a></li>
       <ol><li><a href="/Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li>
-      <li><a href="/Exercises/1.%20HTML/minesweeper/minesweeper.html">minseweeper></a></li>
+      <li><a href="/Exercises/1.%20HTML/minesweeper/minesweeper.html">minseweeper</a></li>
        <li><a href="/Exercises/1.%20HTML/grid.html/grid.html">chessboard</a></li></ol>
 
 
