--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </ul>
  <li><a href="./master/Exercises/1.%20HTML">1. HTML</a></li>
        <ol><li><a href="./Exercises/1.%20HTML/markdown-to-html/index.HTML">Markdown-to-HTML</a></li>
-       <li><a href="./Exercises/1.%20HTML/about-me/aboutme.html">about-me</a></li></ol>
+       <li><a href="./Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li></ol>
 
 
   <li><a href="./Exercises/2.%20CSS">2. CSS</a></li>
-      <ol><li><a href="/Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li>
-      <li><a href="/Exercises/1.%20HTML/minesweeper/minesweeper.html">minseweeper></a></li>
-       <li><a href="/Exercises/1.%20HTML/grid.html/grid.html">chessboard</a></li></ol>
+      <ol><li><a href="./Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li>
+      <li><a href="./Exercises/1.%20HTML/minesweeper/minesweeper.html">minseweeper></a></li>
+       <li><a href="./Exercises/1.%20HTML/grid.html/grid.html">chessboard</a></li></ol>
 
 
 
