--- a/Exercises/2. CSS/website project/website.html
+++ b/Exercises/2. CSS/website project/website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <title>WowWee® - Astonishing Imagination</title>
+    <meta charset="UTF-8">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -9,21 +10,24 @@
               }
               .flexbox1 {
                   display: flex;
-                  flex-direction: column;
+                  flex-direction: row;
                   background-color: black;
               }
         </style>  
     </head>
-    <header></header>
+    <header><img src="babysharkdodo.jpg" alt="babyshark"></header>
     <body>
-        <img src="babysharkdodo.jpg" alt="babysharkimg">
         <div class="flexbox1">
             <div><img src="logo.svg_xml" alt="logo"></div>
             <div>products</div>
             <div>about</div>
             <div>news</div>
             <div>store</div>
-            <div></div>
+            <div><img src="search.png" alt="search"></div>
+            <div><img src="icon.facebook.png" alt="facebook"></div>
+            <div><img src="icon.twitter.png" alt="twitter"></div>
+            <div><img src="icon.youtube.png" alt="youtube"></div>
+            <div><img src="icon.instagram.png" alt="instagram"></div>
 
         </div>
         
