Co-authored-by: jing-chu <jinjingcs@gmail.com>

--- a/Exercises/2. CSS/website project/website.html
+++ b/Exercises/2. CSS/website project/website.html
@@ -11,25 +11,35 @@
               .flexbox1 {
                   display: flex;
                   flex-direction: row;
+                  background-color: rgba(10, 9, 9, 0.829);
+                  justify-content: space-between;
+                  justify-items: center;
+                  height: 140px ;
+                  }
+              .search2.png{
                   background-color: black;
+                  width: 70px;
+                  height: 70px;
               }
-        </style>  
-    </head>
-    <header><img src="babysharkdodo.jpg" alt="babyshark"></header>
-    <body>
-        <div class="flexbox1">
-            <div><img src="logo.svg_xml" alt="logo"></div>
+
+              .header {}
+        </style>
+           <div class="flexbox1">
+            <div><img src="logo.inline.svg_xml" alt="logo"></div>
             <div>products</div>
             <div>about</div>
             <div>news</div>
             <div>store</div>
-            <div><img src="search.png" alt="search"></div>
+            <div><img src="search2.png" alt="search"></div>
             <div><img src="icon.facebook.png" alt="facebook"></div>
             <div><img src="icon.twitter.png" alt="twitter"></div>
             <div><img src="icon.youtube.png" alt="youtube"></div>
             <div><img src="icon.instagram.png" alt="instagram"></div>
-
         </div>
+    </head>
+    <header><img src="babysharkdodo.jpg" alt="babyshark"></header>
+    <body>
+       
         
     </body>
     <footer></footer>
