--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
       <ol><li><a href="./Exercises/2.%20CSS/about-me/aboutme.html">about-me</a></li>
       <li><a href="./Exercises/1.%20HTML/minesweeper/minesweeper.html">minseweeper</a></li>
-       <li><a href="./Exercises/1.%20HTML/grid.html/grid.html">chessboard</a></li></ol>
+       <li><a href="./Exercises/1.%20HTML/grid.html/grid.html">chessboard</a></li>
+       <li><a href="./Exercises/2.%20CSS/website%20project/website.html">website</a></li></ol>
 
 
 
